@@ -143,6 +143,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<argLine>--enable-preview</argLine>
 					<systemPropertyVariables>
 						<spring.profiles.active>local</spring.profiles.active>
 					</systemPropertyVariables>
@@ -189,7 +190,6 @@
 				<version>${checkstyle.version}</version>
 				<configuration>
 					<configLocation>checkstyle.xml</configLocation>
-					<encoding>UTF-8</encoding>
 					<failOnViolation>true</failOnViolation>
 				</configuration>
 				<executions>
